Add definition of property deterministic and hammock

--- a/glushkovizer/doc/automata.tex
+++ b/glushkovizer/doc/automata.tex
@@ -240,7 +240,7 @@ homogène, accessible et coaccessible. Car il possède bien un unique état
 initial (\(q_1\)), mais \(q_3\), \(q_4\) et \(q_5\) ne respecte pas la
 propriété pour être homogène, parce qu'ils ont des transitions allant vers eux
 avec des valeurs différentes. De plus tous ses états sont par accessible depuis
-l'état initial et son inverse est, lui-même aussi, accessible. Et bien sûr il
+l'état initial et son inverse est, lui-même aussi, accessible. Et bien sûr, il
 n'est pas déterministe.
 
 \vphantom{}
