--- a/glushkovizer/doc/formal.tex
+++ b/glushkovizer/doc/formal.tex
@@ -25,12 +25,14 @@
 
 \theoremstyle{definition}
 
+\newtheorem{conjecture}{Conjecture}[section]
 \newtheorem{definition}{Définition}[section]
 \newtheorem{lemma}[definition]{Lemme}
 \newtheorem{example}{Example}[definition]
 
 \makeatletter
 \renewcommand{\thedefinition}{\arabic{section}.\arabic{definition}}
+\renewcommand{\theconjecture}{\arabic{section}.\arabic{conjecture}}
 \makeatother
 
 %--- begin document ------------------------------------------------------------
